--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.19.1"
+    "express": "^4.19.1",
+    "mongoose": "^8.2.3"
   }
 }
