--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.1",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
